Correct alignment for button contents

--- a/packages/enonic-admin-artifacts/src/mixins/elements.less
+++ b/packages/enonic-admin-artifacts/src/mixins/elements.less
@@ -296,12 +296,13 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  align-content: center;
   padding: 1px 19px;
   cursor: pointer;
 
   span {
-    line-height: 24px;
     font-size: 14px;
     font-family: @admin-font-family;
     .color-transition();
